User is now added to Abstract submission.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,6 +22,7 @@
                 @abssubmission.abstractBody
                 <br />
                 <br />
+                @abssubmission.owner.fullname
                 
                 @form(routes.Application.deleteabsSubmission(abssubmission.id)) {
                     <input type="submit" value="Delete">
@@ -45,7 +46,7 @@
         @inputDate(abssubmissionForm("publicationDate"))
         
         @inputText(abssubmissionForm("abstractBody"))
-       
+       @input
         <input type="submit" value="Create">
         
     }
