--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -44,9 +44,9 @@
         @inputText(abssubmissionForm("url"))
         
         @inputDate(abssubmissionForm("publicationDate"))
+      
+        @textarea(abssubmissionForm("abstractBody"), 'rows -> 3, 'cols -> 50)
         
-        @inputText(abssubmissionForm("abstractBody"))
-       @input
         <input type="submit" value="Create">
         
     }
