--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -32,6 +32,7 @@
        
         <input type="submit" value="Login">
 }
+<a href="@routes.Application.signup()">Sign Up</a>
     
     </body>
 </html>
