--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,19 +5,42 @@
 <html>
     <head>
         <title>@title</title>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
-            <header>
-            <a href="#" id="logo"><span>Submitted Abstracts For Conference</span></a>
-            <dl id="user">
+    
+    <div id="pageTop">
+    <div id="pageTopLogo">
+        <a href="#" id="logo"><span>Submitted Abstracts For Conference</span></a>
+    </div>
+    <div id="linksTop">
+        <div id="menu1">
+            <div>
+               <dl id="user">
                 <dt>@user.fullname <span>(@user.email)</span></dt>
                 <dd>
                     <a href="@routes.Application.logout()">Logout</a>
                 </dd>
             </dl>
+            </div>
+        </div>
+    </div>
+    <div id="pageTopWrap">
+        <div id="pageTopRest">
+            <div id="menu2">
+                <nav>
+                    <ul>
+                    <a href="@routes.Application.viewsubmitted()">See Submitted Abstracts</a>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+    </div>
+            
         </header>
         
         @content
