--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -4,17 +4,33 @@
 
 <html>
     <head>
-        <title>Abstract Submission</title>
+        <title>Abstract Submission Application Login</title>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
-        <header>
-            <a href="@routes.Application.index" id="logo"><span>Abstract</span> Submission</a>
+<div id="pageTop">
+    <div id="pageTopLogo">
+        <a href="#" id="logo"><span>Abstract Submission Application Login</span></a>
+    </div>
+    <div id="linksTop">
+        <div id="menu1">
+            <div>
+            </div>
+        </div>
+    </div>
+ </div>
+    <div id="pageMiddle">
+    
+            
         </header>
         
-        @form(routes.Application.authenticate()) {
-   <h1>Sign in</h1>
-   
-   @if(loginform.hasGlobalErrors) {
+        <div id="loginform">
+           <h2>Abstract User Log In</h2>
+           
+              @if(loginform.hasGlobalErrors) {
     <p class="error">
         @loginform.globalError.message
     </p>
@@ -25,14 +41,23 @@
         @flash.get("success")
     </p>
 }
+        
+<ul class="lists">
 
-        @inputText(loginform("email")) 
+@form(routes.Application.authenticate()) {
+
+        <li>@inputText(loginform("email"), '_label -> "Email")</li>
    
-        @inputPassword(loginform("password"))
+        <li>@inputPassword(loginform("password"), '_label -> "Password")</li>
        
-        <input type="submit" value="Login">
+        <li><input type="submit" value="Login" class="loginbtn"></li>
 }
-<a href="@routes.Application.signup()">Sign Up</a>
-    
+
+
+<li><a href="@routes.Application.signup()"><button class="loginbtn">Sign Up</button></a></li>
+
+</ul>
+</div>
+</div>    
     </body>
 </html>
