--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -4,26 +4,51 @@
 
 <html>
     <head>
-        <title>Sign Up for Abstract Submission</title>
+        <title>Abstract Submission Application Sign Up</title>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
-        <header>
-            <a href="@routes.Application.index" id="logo"><span>Abstract</span> Submission</a>
+<div id="pageTop">
+    <div id="pageTopLogo">
+        <a href="#" id="logo"><span>Abstract Submission Application Sign Up</span></a>
+    </div>
+    <div id="linksTop">
+        <div id="menu1">
+            <div>
+            </div>
+        </div>
+    </div>
+ </div>
+    <div id="pageMiddle">
+    
+            
         </header>
+        
+                <div id="loginform">
 
-    <h2>Add a new Abstract</h2>
+    <h2>Abstract User Sign Up</h2>
+    
+    <ul class="lists">
     
     @form(routes.Application.newUser()) {
         
-        @inputText(signup("email")) 
+        <li>@inputText(signup("email"), '_label -> "Email") </li>
         
-        @inputText(signup("fullname"))
+        <li>@inputText(signup("fullname"), '_label -> "Full Name")</li>
         
-        @inputPassword(signup("password"))
+        <li>@inputPassword(signup("password"), '_label -> "Password")</li>
        
-        <input type="submit" value="Create">
+        <li><input type="submit" value="Create" class="loginbtn"></li>
         
     }
+    
+    <li><a href="@routes.Application.login()"><button class="loginbtn">Cancel</button></a></li>
+    </ul>
+    </div>
+    </div>
     
     </body>
     </html>
